<resources>
    <string name="app_name">FlynParkMelb</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="text_siginin">Sign in</string>
    <string name="text_register">Register</string>
    <string name="text_send">Send</string>
    <string name="error_message_credentials">Please enter valid credentials</string>
    <string name="error_message_name">Please enter name</string>
    <string name="error_message_firstname">Please enter first name</string>
    <string name="error_message_lastname">Please enter name last</string>
    <string name="error_message_email">Please enter a valid email</string>
    <string name="error_message_password">Please enter a valid password</string>
    <string name="error_message_info">Please enter valid information</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Invalid Email or Password</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_search_parking">Search Parking</string>
    <string name="text_paring_history">Parking Hiistory</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_delete_account">Delete Account</string>
    <string name="text_about">About Fly&amp;Park Melbourne</string>
    <string name="text_signoff">Sign Off</string>
    <string name="text_parking_expires">Parking Expires In</string>
    <string name="text_hrs">Hrs</string>
    <string name="text_mins">Mins</string>
    <string name="text_time_seperator">:</string>
    <string name="text_offstreet_parking">Off-Street</string>
    <string name="text_onstreet_parking">On-Street</string>
    <string name="text_bayid">Bay ID</string>
    <string name="text_dash">-</string>
    <string name="text_rate">Rate Per Hour</string>
    <string name="text_time_limit">Time Limit</string>
    <string name="text_available_parking">Available Parking</string>
    <string name="text_parking_expired">Parking Expired</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="text_confirm_signoff">Are you sure you want to sign Off?</string>
    <string name="text_send_password">Send Password</string>
    <string name="text_registration">Registration</string>
    <string name="text_parking_location">Parking Location</string>
    <string name="text_navigating">Navigating</string>
    <string name="text_set_notification">Set Notification</string>
    <string name="text_aboutus_content">FlynPark Melbourne is a parking app based on android platform assisting drivers to find the best fitted available parking spaces in Melbourne city council area.</string>
    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_welcome">Welcome to Fly&amp;Park</string>
</resources>