<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".ui.changepassword.ChangePasswordFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="500px"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#0011F76B"
            android:textColorHint="@color/fly_green"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/fly_green"
            app:passwordToggleTint="@color/fly_green"
            app:placeholderTextColor="@color/fly_green"
            app:prefixTextColor="@color/fly_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/text_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/fly_green"
                android:textColorHint="@color/fly_green"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#0011F76B"
            android:textColorHint="@color/fly_green"
            app:boxBackgroundColor="#00FFFFFF"
            app:passwordToggleTint="@color/fly_green"
            app:placeholderTextColor="@color/fly_green"
            app:prefixTextColor="@color/fly_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/fly_green"
                android:textColorHint="@color/fly_green"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/fly_green"
            android:capitalize="none"
            android:inputType="textCapWords"
            android:text="@string/text_change_password"
            android:textColor="@color/fly_purple"
            android:textSize="20sp"
            android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>